# football-manager-tools

./: .gitignore  LICENSE.md  README.md
.github/workflows/: main.yml
blender_addons/io_scene_sia/: __init__.py  data_types.py  export_sia.py  fm_material.blend  import_sia.py  parse_sia.py  read_utils.py  utils.py  write_utils.py
jsb_editor/: Cargo.toml
jsb_editor/src/: main.rs
sia_editor/: Cargo.toml
sia_editor/src/: binrw_version.rs  egui_helpers.rs  lib.rs  main.rs  read.rs  types.rs  write.rs
sia_parser/: Cargo.toml
sia_parser/src/: bounding_box.rs  lib.rs  material.rs  mesh.rs  model.rs  stream_ext.rs  texture.rs  triangle.rs  vertex.rs
sia_viewer/: Cargo.toml
sia_viewer/src/: main.rs  save_obj.rs
