[package]
name = "sia_parser"
version = "0.1.0"
authors = ["stromberg"]
edition = "2018"

[lib]
name = "sia_parser"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.12.1"
# features = ["extension-module"]

[dependencies]
byteorder = "1.3.4"
nalgebra = "0.22.0"
jwalk = "0.5.1"
thiserror = "1.0.20"