[package]
name = "sia_viewer"
version = "0.1.0"
authors = ["Andreas Strømberg"]
edition = "2018"

[dependencies]
image = "0.23.9"
native-dialog = "0.4.2"
kiss3d = { git = "https://github.com/Stromberg90/kiss3d" }
nalgebra = "0.22.0"
nfd2 = "0.2.1"
sia_parser = {path = "../sia_parser"}
obj-exporter = "0.2.0"